added paragraph about minimum notch rules

--- a/definitions.tex
+++ b/definitions.tex
@@ -114,3 +114,5 @@ Every via definition must have two minimum enclosure rules, one for every layer,
 	\caption{minimum width rule}
 	\label{fig:technology_rule_via_dimensions}
 \end{figure}
+
+Last but not least there are several minimum notch rule definitions available in the technology definition of AMS. They are mostly used for the internal layout design of for example a transistor. During the routing they are unimportant, as a route never has a notch. Therefore I won't describe this type of technology rule in detail here. 
