replaced \ref with \nref

--- a/routing.tex
+++ b/routing.tex
@@ -2,7 +2,7 @@
 
 Even nowadays the routing is often done manually for analogue circuits. This is mainly caused by a lack of good tools and therefore the missing trust of engineers in them. The engineers consider a lot of different constraints during the routing, for example symmetries, net lengths and capacitive couplings. All these things have a major impact on the performance of the circuit, as in the analogue world it is very important to have a really accurate signal level, only high or low isn't enough.
 
-The designer additonally adds guards and rings to the placement to protect certain devices from noise. This noise can come from for example the clock net or other routes, which carry a signal with high frequency. But high frequencies aren't the only disturbing effects, already during the placement the designer has to consider temperature gradients, caused by transistors with a high power consumption. To avoid problems with different temperatures in the substrate of for example the devices of differential pair the can be placed symmetric or can even have a common centroid. Around these grouped modules then the designer can create for example a guard ring around to protect the devices even more. An example for a manually routed layout can be seen in [\ref{fig:miller_amplifier_routed_layout}].
+The designer additonally adds guards and rings to the placement to protect certain devices from noise. This noise can come from for example the clock net or other routes, which carry a signal with high frequency. But high frequencies aren't the only disturbing effects, already during the placement the designer has to consider temperature gradients, caused by transistors with a high power consumption. To avoid problems with different temperatures in the substrate of for example the devices of differential pair the can be placed symmetric or can even have a common centroid. Around these grouped modules then the designer can create for example a guard ring around to protect the devices even more. An example for a manually routed layout can be seen in \nref{fig:miller_amplifier_routed_layout}.
 
 So for an automatic routing algorithm a lot of different constraints must be considered. There are even more obstacles than just the devices and already created routes, for example the routes should pass over guard rings. To solve this problem in the following chapter are two different approaches presented: One simple sequentially line expansion router and one extend version of the previous one, which selects all routes together in one step. But first I have to discuss the changes that were necessary for the implementation of the routing algorithms.
 
@@ -53,7 +53,7 @@ During this thesis two different routing algorithms were implemented: First of a
 \subsection{Line Expansion Router}
 The first thing which the algorithm has to do, before it can calculate a route, is to selected the start and target contact area. There can be several possibilities, as every pin can have several contact areas. Later on we will even see that already created routes can be candidates to start or end with a route. Basically this task can be seen as the selection of the closest rectangles of two lists of possibilities. For this I first want to talk a little bit about how the closest distance between two rectangles can be calculated.
 
-For two rectangles there are several possible constellations. The first one we usually check is, if the overlap. If this is the case we can calculated easily the rectangle which is covered by both [\ref{fig:rectangles_overlapping}]. The distance is 0 in this case, and as start points for both rectangles we can select the center of gravity of the overlapping area.
+For two rectangles there are several possible constellations. The first one we usually check is, if the overlap. If this is the case we can calculated easily the rectangle which is covered by both \nref{fig:rectangles_overlapping}. The distance is 0 in this case, and as start points for both rectangles we can select the center of gravity of the overlapping area.
 
 \begin{figure}
 	\centering
@@ -62,7 +62,7 @@ For two rectangles there are several possible constellations. The first one we u
 	\label{fig:rectangles_overlapping}
 \end{figure}
 
-If the two rectangles do not overlap it becomes a little bit more difficult. In this case we can at least say, that one of the rectangle has its closest point at one of the. Actually there can be even an endless count of solutions for this problem, but we are only interested in one of them. Because of this we select the easiest to calculate solution, which means the selection of a corner for one rectangle. The closest corner from the first rectangle to the second one is that one, which has the closest euclidean distance to the center of gravity of the second one [\ref{fig:rectangles_closest_corner}]. As we now know for one rectangle the closest point we can start to select the closest point on the second one. This point must be obviously on one of the edges. Every edges is basically a line segment, where the closest point can be calculated easily. For this task we first need the expansion of the line segment into a whole line. We then can turn this line 90 degrees (it doesn't matter in which direction as it is a line) and move this new line, so that it crosses our point, from which we want to know the closest point on the line segment. The crossing point of these two lines, if it is also inside the line segment, is the closest point. If this crossing point is outside the line segment the closest point must be the start or end point of the line segment, which are actually the rectangle's corners.
+If the two rectangles do not overlap it becomes a little bit more difficult. In this case we can at least say, that one of the rectangle has its closest point at one of the. Actually there can be even an endless count of solutions for this problem, but we are only interested in one of them. Because of this we select the easiest to calculate solution, which means the selection of a corner for one rectangle. The closest corner from the first rectangle to the second one is that one, which has the closest euclidean distance to the center of gravity of the second one \nref{fig:rectangles_closest_corner}. As we now know for one rectangle the closest point we can start to select the closest point on the second one. This point must be obviously on one of the edges. Every edges is basically a line segment, where the closest point can be calculated easily. For this task we first need the expansion of the line segment into a whole line. We then can turn this line 90 degrees (it doesn't matter in which direction as it is a line) and move this new line, so that it crosses our point, from which we want to know the closest point on the line segment. The crossing point of these two lines, if it is also inside the line segment, is the closest point. If this crossing point is outside the line segment the closest point must be the start or end point of the line segment, which are actually the rectangle's corners.
 
 \begin{figure}
 	\centering
@@ -73,7 +73,7 @@ If the two rectangles do not overlap it becomes a little bit more difficult. In 
 
 After the algorithm has selected start and target contact areas the next step is to avoid routes across modules. For this purpose during all the following steps the modules are considered as obstacles. But during the first step usually the route has first to get out of the module. To avoid additional, accidentally added, gates the algorithm has to choose the shortest way to get out of the module. To decrease the resistance it is also possible to start right at the contact area to the next layer and use for example metal to get out of the module as fast as possible.
 
-As the algorithm now has all the necessary information the actual line expansion routing can start. The main idea behind a line expansion router is that the routes are created sequentially. Every single step is based on a map of obstacles, which the route mustn't cross. From the starting point beginning always the next possible point of a route is calculated and the algorithm afterwards again applied to this partial problem. At the beginning of this recursive algorithm, as usual, the terminating condition is checked: If we have reached the target point. In every single step there are several decisions to be made: First the possible directions are grouped in good and bad directions [\ref{fig:good_and_bad_directions}]. Good directions are those, which reduce the distance to the target and bad ones are all the others.
+As the algorithm now has all the necessary information the actual line expansion routing can start. The main idea behind a line expansion router is that the routes are created sequentially. Every single step is based on a map of obstacles, which the route mustn't cross. From the starting point beginning always the next possible point of a route is calculated and the algorithm afterwards again applied to this partial problem. At the beginning of this recursive algorithm, as usual, the terminating condition is checked: If we have reached the target point. In every single step there are several decisions to be made: First the possible directions are grouped in good and bad directions \nref{fig:good_and_bad_directions}. Good directions are those, which reduce the distance to the target and bad ones are all the others.
 
 %\begin{figure}
 %	\centering
@@ -83,7 +83,7 @@ As the algorithm now has all the necessary information the actual line expansion
 %\end{figure}
 PICTURE MISSING GOOD AND BAD DIRECTIONS
 
-Additionally it makes no sense to go back the same direction where the last step came from. Also the same direction like the last step is not senseful. Because if this would be a good decision, the last step could have gone further. So these two directions are removed from the good directions. After this selection the router can make one step further in every good directon, as far as possible. This means, that the next step can go as far, as no obstacle is on the way or the target (in this coordinate) is reached [\ref{fig:router_go_as_far_as_possible}].
+Additionally it makes no sense to go back the same direction where the last step came from. Also the same direction like the last step is not senseful. Because if this would be a good decision, the last step could have gone further. So these two directions are removed from the good directions. After this selection the router can make one step further in every good directon, as far as possible. This means, that the next step can go as far, as no obstacle is on the way or the target (in this coordinate) is reached \nref{fig:router_go_as_far_as_possible}.
 
 %\begin{figure}
 %	\centering
@@ -93,7 +93,7 @@ Additionally it makes no sense to go back the same direction where the last step
 %\end{figure}
 PICTURE MISSING ROUTER GO AS FAR AS POSSIBLE
 
-During the calculation of the steps towards the target we count those, which are feasible. If none of them is feasible the algorithm will have to select one of the bad directions for the next step. A major premission for this is also, that our last step ended at an obstacle. The router now can go as far as necessary into this bad direction [\ref{fig:router_go_as_far_as_necessary}].
+During the calculation of the steps towards the target we count those, which are feasible. If none of them is feasible the algorithm will have to select one of the bad directions for the next step. A major premission for this is also, that our last step ended at an obstacle. The router now can go as far as necessary into this bad direction \nref{fig:router_go_as_far_as_necessary}.
 
 %\begin{figure}
 %	\centering
