--- a/thesis.tex
+++ b/thesis.tex
@@ -31,6 +31,8 @@
 \KOMAoptions{BCOR=5mm}
 
 \newcommand{\nref}[1]{{[\ref{#1}]}}
+\definecolor{maroon}{rgb}{.5,0,0}
+\definecolor{darkgreen}{rgb}{0,.5,0}
 
 \begin{document}
 \authors{Benedikt Schmidt}
