small improvements in structure

--- a/placement.tex
+++ b/placement.tex
@@ -5,7 +5,7 @@ At the moment this information about the groups must be fed in by the user, but 
 \begin{figure}
 	\centering
 	\includegraphics[scale=0.6]{FIG/miller_amplifier_schematic.png}
-	\caption{miller amplifier}
+	\caption{schematic of a miller amplifier}
 	\label{fig:miller_amplifier_schematic}
 \end{figure}
 
