--- a/routing.tex
+++ b/routing.tex
@@ -8,8 +8,8 @@ So for an automatic routing algorithm a lot of different constraints must be con
 
 \begin{figure}
 	\centering
-	\includegraphics[scale=.3]{FIG/miller_amplifier_layout_routed.png}
-  	\caption{routed layout of a miller amplifier}
+	\includegraphics[scale=.4]{FIG/miller_amplifier_layout_routed.png}
+  	\caption{manually routed layout of a miller amplifier}
 	\label{fig:miller_amplifier_routed_layout}
 \end{figure}
 
@@ -101,7 +101,7 @@ During the calculation of the steps towards the target we count those, which are
 \begin{figure}
 	\centering
 	\input{FIG/router_as_far_as_necessary.svg}
- 	\caption{one step into a bad direction should go only as far as necessary}
+ 	\caption{a step into a bad direction should go only as far as necessary}
 	\label{fig:router_as_far_as_necessary}
 \end{figure}
 
@@ -121,4 +121,12 @@ Finally, if the start point is the same as the end point the algorithm has calcu
 
 For this first algorithm a lot of different possibilities for every necessary connection is quite a lot of information, as it chooses only the shortest one in terms of resistance. But the results, which we generate here, can be reused for the next, extended, version of the line expansion algorithm.
 
+PICTURE MISSING OF ROUTED MILLER AMPLIFIER (LAYOUT)
+
 \subsection{Extended Line Expansion Router}
+
+\subsubsection{Creation of routes}
+MISSING
+
+\subsubsection{Selection of routes}
+MISSING
